--- a/src/components/nav-bar.css
+++ b/src/components/nav-bar.css
@@ -1,15 +1,21 @@
 #header {
 	position: fixed;
 	top: 0;
+	padding-left: 2%;
 	margin: 0;
 	width: 100%;
-	height: 50px;
-	background-color: rgb(3, 40, 95);
+	height: 60px;
+
+	display: flex;
+	align-items: center;
+	/* border-bottom: 1px solid white; */
+	/* background-color: red; */
+	background-color: rgb(4, 30, 69);
 }
 
 #header p {
 	margin: 0;
 	color: white;
-	text-align: left;
-	font-size: 1em;
+	font-size: 1.5rem;
+	font-weight: bold;
 }
