--- a/src/styling/draw-lorenz.css
+++ b/src/styling/draw-lorenz.css
@@ -1,7 +1,23 @@
+h1,
+h2 {
+	text-align: center;
+}
+
+h4 {
+	margin: 0;
+	padding: 0;
+}
+
 ul {
 	list-style-type: none;
 	margin: 0;
 	padding: 0;
+}
+
+a {
+	display: block;
+	color: white;
+	text-decoration: none;
 }
 
 #sketch-holder {
@@ -13,17 +29,6 @@ ul {
 	z-index: -1;
 	overflow-x: hidden;
 }
-
-/* #overlay {
-	position: fixed;
-	top: 50px;
-
-	left: 0;
-	width: 100%;
-	height: 100%;
-	z-index: 1;
-	background-color: rgba(20, 33, 75, 0.739);
-} */
 
 #content {
 	position: fixed;
@@ -43,13 +48,16 @@ ul {
 	padding: 3%;
 
 	display: flex;
+	flex-wrap: wrap;
 	justify-content: space-between;
+	align-items: center;
 
 	background-color: rgba(4, 255, 130, 0);
 }
 #top-container-left {
 	height: 40%;
 	width: 30%;
+	min-width: 300px;
 
 	display: flex;
 	flex-direction: column;
@@ -61,12 +69,21 @@ ul {
 	font-family: Arial, Helvetica, sans-serif;
 	text-transform: uppercase;
 }
+#name {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
 #contact-button {
-	height: 15%;
-	width: 25%;
-	font-size: 0.8em;
-	border: 1px solid rgb(105, 105, 105);
-	border-radius: 4px;
+	padding: 0.5em 1em;
+	display: inline-block;
+	border-radius: 5px;
+	background-color: white;
+	color: rgb(4, 30, 69);
+	font-size: medium;
+	text-decoration: none;
+	cursor: pointer;
 }
 #contact-button:hover {
 	box-shadow: 0 4px 8px 0 rgba(221, 221, 221, 0.2),
@@ -81,7 +98,8 @@ ul {
 	justify-content: flex-end;
 
 	color: white;
-	font-size: 1.5em;
+	text-align: justify;
+	font-size: 1.25em;
 	line-height: 2em;
 }
 
@@ -90,13 +108,12 @@ ul {
 	box-sizing: border-box;
 	min-height: 70%;
 	width: 100%;
-	margin: 5% 0;
-	padding: 3%;
+	/* margin: 5% 0; */
+	padding: 4% 3%;
 
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: space-between;
-	align-items: center;
 
 	background-color: rgb(245, 245, 245);
 }
@@ -109,6 +126,7 @@ ul {
 .mid-container-text {
 	padding: 5%;
 	color: rgb(0, 0, 0);
+	text-align: justify;
 	font-size: x-large;
 	line-height: 1.5em;
 }
@@ -131,72 +149,34 @@ ul {
 /* BOTTOM CONTAINER  */
 #bottom-container {
 	box-sizing: border-box;
-	height: 100%;
+	height: 110%;
 	width: 100%;
-	padding: 0 3%;
-	margin: 5% 0;
+	padding: 5% 3%;
+	/* margin: 5% 0; */
 
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: space-between;
-
-	/* background-color: rgba(22, 248, 15, 0.322); */
-}
-#bottom-container img {
-	max-height: 80%;
-	max-width: 50%;
+	background-color: rgba(4, 30, 69, 1);
 }
 
 #bottom-container-left {
 	height: 100%;
-	width: 38%;
+	width: 45%;
 	display: flex;
 	flex-direction: column;
+	align-items: center;
 	justify-content: space-between;
-	/* background-color: rgba(22, 248, 15, 0.322); */
+	/* background-color: rgba(23, 248, 15, 0.164); */
 }
 #bottom-container-right {
 	height: 100%;
-	width: 38%;
+	width: 45%;
 	display: flex;
 	flex-direction: column;
+	align-items: center;
 	justify-content: space-between;
-	/* background-color: rgba(251, 1, 1, 0.349); */
-}
-
-.bottom-container-box {
-	box-sizing: border-box;
-
-	width: 100%;
-	padding: 2% 6%;
-	border: 1px solid white;
-	border-radius: 5px;
-
-	display: flex;
-	flex-direction: column;
-	justify-content: space-between;
-	background-color: rgb(4, 30, 69);
-	color: white;
-}
-a {
-	color: white;
-}
-.bottom-container-stacks {
-	font-style: italic;
-}
-
-.bottom-container-images {
-	height: 100%;
-	display: flex;
-	justify-content: center;
-}
-.bottom-container-image {
-	max-height: 60px;
-	width: auto;
-	transition: transform 0.2s;
-}
-.bottom-container-image:hover {
-	transform: scale(1.8) translate(0, -30px);
+	/* background-color: rgba(251, 1, 1, 0.205); */
 }
 
 /* FOOTER CONTAINER  */
@@ -204,51 +184,53 @@ a {
 	box-sizing: border-box;
 	height: 100%;
 	width: 100%;
-	padding: 3%;
+	padding: 3% 2%;
 
 	display: flex;
+	flex-wrap: wrap;
 	justify-content: space-between;
 
+	font-size: large;
+	text-align: justify;
 	/* background-color: rgba(145, 194, 10, 0.89); */
 }
 #footer-container-left {
 	height: 100%;
-	width: 30%;
+	width: 28%;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+
+	/* background-color: rgba(251, 1, 1, 0.205); */
+}
+
+#footer-container-left a {
+	font-size: x-large;
+	line-height: 35px;
+}
+#footer-container-left a:hover {
+	text-decoration: underline;
 }
 
 #footer-container-right {
 	height: 100%;
-	width: 30%;
-}
-
-.footer-container-button {
-	height: 70px;
-	width: 70px;
-	border: 2px solid white;
-	border-radius: 50%;
-}
-.footer-container-button:hover {
-	box-shadow: 0 0 20px 0 rgba(221, 221, 221, 0.2),
-		0 0px 40px 0 rgba(212, 212, 212, 0.19);
-}
-
-#button-1 {
-	box-sizing: border-box;
-	margin: 30% 0 0 30%;
+	width: 28%;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 }
 
 .footer-container-description {
 	box-sizing: border-box;
-	height: auto;
-	width: 70%;
-	padding: 3%;
-	margin-top: 50%;
+	height: 50%;
+	width: 80%;
+	padding: 3% 5%;
 	border: 1px solid white;
-	border-radius: 5px;
+	border-radius: 7px;
 
 	color: white;
 	font-size: 1em;
 	font-family: Arial, Helvetica, sans-serif;
-	/* text-transform: uppercase; */
-	visibility: hidden;
 }
