--- a/src/components/nav-bar.css
+++ b/src/components/nav-bar.css
@@ -4,18 +4,19 @@
 	padding-left: 2%;
 	margin: 0;
 	width: 100%;
-	height: 60px;
+	height: 4rem;
 
 	display: flex;
 	align-items: center;
 	/* border-bottom: 1px solid white; */
 	/* background-color: red; */
 	background-color: rgb(4, 30, 69);
+	/* background-color: red; */
 }
 
 #header p {
 	margin: 0;
 	color: white;
-	font-size: 1.5rem;
+	font-size: 2.5rem;
 	font-weight: bold;
 }
