--- a/src/styling/draw-lorenz.css
+++ b/src/styling/draw-lorenz.css
@@ -34,7 +34,7 @@ h3 {
 }
 
 h1 {
-	padding: 0.5rem 1.5rem;
+	padding: 0 1.5rem;
 	text-align: center;
 	font-size: 3.5rem;
 }
@@ -102,6 +102,7 @@ img:focus {
 }
 
 .fullWindow-container {
+	margin-top: 4rem;
 	min-height: calc(100% - 4rem);
 }
 
@@ -159,6 +160,7 @@ img:focus {
 		width: 100%;
 	}
 	.fullWindow-container {
+		margin-top: 0;
 		min-height: 100%;
 	}
 }
