--- a/src/styling/draw-lorenz.css
+++ b/src/styling/draw-lorenz.css
@@ -34,7 +34,7 @@ h3 {
 }
 
 h1 {
-	padding: 0 1.5rem;
+	padding: 2rem 1.5rem 0.5rem;
 	text-align: center;
 	font-size: 3.5rem;
 }
@@ -92,13 +92,13 @@ img:focus {
 .container {
 	box-sizing: border-box;
 	width: 100%;
-	padding: 0.5rem 0.5rem 3rem;
+	padding: 0 0.5rem 4rem;
 	text-align: justify;
 }
 .container-element {
 	box-sizing: border-box;
 	width: clamp(25%, 48%, 50%);
-	padding: 1rem;
+	padding: 0 1rem;
 }
 
 .fullWindow-container {
@@ -155,6 +155,7 @@ img:focus {
 	}
 	.container {
 		flex-direction: column;
+		padding: 0 0.5rem 2rem;
 	}
 	.container-element {
 		width: 100%;
