--- a/src/styling/draw-lorenz.css
+++ b/src/styling/draw-lorenz.css
@@ -153,6 +153,9 @@ img:focus {
 	:root {
 		font-size: 11px;
 	}
+	h1 {
+		padding: 0 1.5rem 0.5rem;
+	}
 	.container {
 		flex-direction: column;
 		padding: 0 0.5rem 2rem;
