--- a/src/styling/draw-lorenz.css
+++ b/src/styling/draw-lorenz.css
@@ -154,7 +154,7 @@ img:focus {
 		font-size: 11px;
 	}
 	h1 {
-		padding: 0 1.5rem 0.5rem;
+		padding: 1rem, 1.5rem 0.5rem;
 	}
 	.container {
 		flex-direction: column;
