--- a/src/styling/draw-lorenz.css
+++ b/src/styling/draw-lorenz.css
@@ -80,7 +80,6 @@ img:focus {
 
 .main {
 	position: absolute;
-	/* top: 5rem; */
 	left: 0;
 	width: 100%;
 	height: 100%;
@@ -132,7 +131,10 @@ img:focus {
 #about {
 	padding: 1rem 0.5rem 8rem;
 }
-#contact {
+#myWorks {
+	padding: 3rem 0.5rem;
+}
+#socials {
 	padding: 1rem 20%;
 	display: flex;
 	justify-content: space-around;
@@ -170,5 +172,8 @@ img:focus {
 	.fullWindow-container {
 		margin-top: 0;
 		min-height: 100%;
+	}
+	#about {
+		padding: 1rem 0.5rem 3rem;
 	}
 }
