--- a/src/styling/draw-lorenz.css
+++ b/src/styling/draw-lorenz.css
@@ -128,6 +128,13 @@ img:focus {
 	justify-content: center;
 }
 
+.stack-div {
+	padding-bottom: 1rem;
+}
+.stack-div img {
+	padding: 0.5rem 1rem;
+}
+
 #about {
 	padding: 1rem 0.5rem 8rem;
 }
