--- a/src/styling/draw-lorenz.css
+++ b/src/styling/draw-lorenz.css
@@ -214,18 +214,7 @@ img:focus {
 		justify-content: center;
 	}
 	.stack-div img {
-		padding: 0.5rem 1.5rem 0.5rem 0;
+		padding: 1rem;
 		width: 17%;
 	}
-
-	/* #hobbies {
-		display: flex;
-		flex-direction: column;
-		align-items: center;
-	}
-	#interests {
-		display: flex;
-		flex-direction: column;
-		align-items: center;
-	} */
 }
