--- a/src/styling/home.css
+++ b/src/styling/home.css
@@ -132,11 +132,12 @@ img:focus {
 	padding-bottom: 1rem;
 }
 .stack-div img {
+	width: 55px;
 	padding: 0.5rem 1.5rem 0.4rem 0;
 }
 
 #aboutMe {
-	padding: 1rem 0.5rem 8rem;
+	padding: 1rem 1.5rem 8rem;
 }
 #myWorks {
 	padding: 3rem 0.5rem;
