--- a/src/components/card.css
+++ b/src/components/card.css
@@ -37,7 +37,7 @@
 }
 
 .card-title::after {
-	content: "";
+	content: '';
 	height: 3px;
 	width: 100%;
 	left: 0;
@@ -56,7 +56,7 @@
 }
 
 .card-body {
-	min-height: 9ch;
+	min-height: 122px;
 	margin: 1rem 0 0.5rem;
 	color: rgb(255, 255, 255, 0.9);
 	font-size: 1.3rem;
